Fix ATX sessions alignment

--- a/src/app/pages/solution/lifecycle/lifecycle.component.scss
+++ b/src/app/pages/solution/lifecycle/lifecycle.component.scss
@@ -545,3 +545,11 @@ polygon {
 // 	color:$vibblue !important;
 // 	background-color: transparent !important;
 // }
+
+.lifecycle-modal {
+	height: 100%;
+}
+
+.lifecycle-viewall-modal {
+	min-height: 100%;
+}
